# youth-bot

./: .env.ren  .gitignore  Dockerfile  Makefile  docker-compose.yml  loader.py  main.py  pyproject.toml  requirements.txt  server.py
.github/workflows/: deploy.yml
api/: exceptions.py
api/models/: __init__.py  group.py  list.py  user.py
api/routes/: __init__.py  auth.py  groups.py  lists.py  users.py
api/services/: auth.py
api/templates/: auth.html
app/: api.py  routers.py
app/commands/: __init__.py  admins.py  default.py  super_admin.py
app/filters/: __init__.py  admin.py  role.py
app/handlers/: __init__.py  cancel.py  error.py
app/handlers/admins/: __init__.py  groups.py  lists.py  needs.py  notify.py  users.py
app/handlers/users/: __init__.py  groups.py  lists.py  need.py  search.py  settings.py  start.py
app/keyboards/: __init__.py  apply.py  groups.py  lang.py  list.py  lists.py  menu.py  search.py  settings.py  users.py
app/middlewares/: __init__.py  logging.py  user.py
app/states/: __init__.py  group.py  list.py  need.py  notify.py  search.py
data/: config.py
data/locales/: bot.pot
data/locales/en/LC_MESSAGES/: bot.mo  bot.po
data/locales/ru/LC_MESSAGES/: bot.mo  bot.po
data/locales/uk/LC_MESSAGES/: bot.mo  bot.po
database/models/: __init__.py  base.py  config.py  group.py  list.py  list_user.py  need.py  status.py  user.py
migrations/versions/: b52d36c0d5ae_added_tables.py
utils/: logging.py
