[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["WebShining <webshining@protonmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.6.0"
babel = "^2.15.0"
environs = "^11.0.0"
loguru = "^0.7.2"
apscheduler = "^3.10.4"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
jinja2 = "^3.1.4"
pyjwt = "^2.8.0"
requests-html = "^0.10.0"
lxml = { extras = ["html-clean"], version = "^5.2.2" }
pydantic = "^2.7.1"
redis = "^5.0.4"
surrealdb = "^0.3.2"
hypercorn = "^0.17.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
